2007-11-15 Dmitry Dulepov  <dmitry@typo3.org>

	* Created