@@ -3,7 +3,7 @@
 ########################################################################
 # Extension Manager/Repository config file for ext: "comments_ic"
 #
-# Auto generated 15-11-2007 12:56
+# Auto generated 19-11-2007 12:20
 #
 # Manual updates:
 # Only the data in the array - anything else is removed by next write.
@@ -12,12 +12,12 @@
 
 $EM_CONF[$_EXTKEY] = array(
 	'title' => 'Comments: individual closing',
-	'description' => 'Adds individual closing of comments for some records',
+	'description' => 'Adds individual closing of comments for tt_news and commerce products',
 	'category' => 'fe',
 	'author' => 'Dmitry Dulepov',
 	'author_email' => 'dmitry@typo3.org',
 	'shy' => '',
-	'dependencies' => '',
+	'dependencies' => 'comments',
 	'conflicts' => '',
 	'priority' => '',
 	'module' => '',
@@ -29,16 +29,17 @@ $EM_CONF[$_EXTKEY] = array(
 	'clearCacheOnLoad' => 0,
 	'lockType' => '',
 	'author_company' => '',
-	'version' => '0.1.0',
+	'version' => '1.0.1',
 	'constraints' => array(
 		'depends' => array(
 			'php' => '5.0.0-0.0.0',
+			'comments' => '0.9.0-',
 		),
 		'conflicts' => array(
 		),
 		'suggests' => array(
 			'tt_news' => '',
-			'comments' => '',
+			'commerce' => '',
 		),
 	),
 	'_md5_values_when_last_written' => 'a:7:{s:9:"ChangeLog";s:4:"c3c9";s:29:"class.tx_commentsic_hooks.php";s:4:"acc0";s:12:"ext_icon.gif";s:4:"ee94";s:17:"ext_localconf.php";s:4:"0c27";s:14:"ext_tables.php";s:4:"ac74";s:14:"ext_tables.sql";s:4:"9a75";s:16:"locallang_db.xml";s:4:"705d";}',
